src/tests/test-src/errors/E56-non-num-range.syntran
// E56: non-num-range
// An array range bound is not a numeric type

let a = ["a": "z"];
